# dev

android/AndroidAppShortcut/: README.md  settings.gradle
discomplexity/: CMakeLists.txt
discomplexity/src/: discomplexity.cc  discomplexity.hh
discomplexity/src/discomplexity/: array.cc  array.hh  collection.hh  container.hh  memory.hh  reference.cc  reference.hh  space.cc  space.hh  vector.hh
gl/: README.md  example.20200122.cpp
math/: CMakeLists.txt
math/src/: discomplexity.cc  discomplexity.hh
math/src/discomplexity/: array.cc  array.hh  debug.hh  memory.cc  memory.hh  point.cc  point.hh  vector.cc  vector.hh
matrix/: array.cc  array.hh  point.cc  point.hh  vector.hh
old/: README.md  SUMMARY.md  book.json
old/c/: CMakeLists.txt  README.md
old/c/source/: novemberizing.c  novemberizing.h
old/c/source/novemberizing/: random.c  random.h  time.c  time.h
old/core/: CMakeLists.txt  README.md
old/core/sample/: CMakeLists.txt
old/core/sample/novemberizing/: sample.c
old/core/sample/novemberizing/memory/: sample.c
old/core/sample/novemberizing/random/: sample.c
old/core/sample/novemberizing/string/: sample.c
old/core/source/: novemberizing.h
old/core/source/novemberizing/: log.c  memory.c  random.c  string.c  timestamp.c
old/core2/: .gitignore  CMakeLists.txt  README.md
old/core2/document/: novemberizing.core.log.md  novemberizing.core.random.md  novemberizing.core.string.md  novemberizing.core.timestamp.md  novemberizing.uml
old/core2/sample/: CMakeLists.txt
old/core2/sample/novemberizing/: log.c  memory.c  random.c  string.c  thread.c  timestamp.c
old/core2/source/: novemberizing.c  novemberizing.h
old/core2/source/novemberizing/: log.c  memory.c  random.c  string.c  thread.c  timestamp.c
old/cplusplus/: CMakeLists.txt  README.md
old/cplusplus/sample/: CMakeLists.txt
old/cplusplus/sample/novemberizing/engine/: sample.cpp
old/cplusplus/sample/novemberizing/log/: sample.cpp
old/cplusplus/source/: novemberizing.cc  novemberizing.hh
old/cplusplus/source/novemberizing/: bytes.hh  bytes.hp  capacity.hh  capacity.hp  collection.cc  collection.hh  collection.hp  command.hh  container.cc  container.hh  container.hp  core.hh  core.hp  descriptor.cc  descriptor.hh  descriptor.hp  dictionary.cc  dictionary.hh  dictionary.hp  endian.hp  event.cc  event.hh  event.hp  exception.hh  exception.hp  executable.cc  executable.hh  executable.hp  function.hh  function.hp  input.cc  input.hh  input.hp  integer.hp  iterator.cc  iterator.hh  iterator.hp  list.cc  list.hh  list.hp  (+33 more)
old/cplusplus/source/novemberizing/array/: list.hh  list.hp
old/cplusplus/source/novemberizing/binary/search/: tree.cc  tree.hh  tree.hp
old/cplusplus/source/novemberizing/binary/search/tree/: node.hp
old/cplusplus/source/novemberizing/bytes/: to.hp
old/cplusplus/source/novemberizing/command/: line.cc  line.hh  line.hp
old/cplusplus/source/novemberizing/container/: base.hp
old/cplusplus/source/novemberizing/container/base/: accessor.hp
old/cplusplus/source/novemberizing/core/: memory.cc  memory.hh  memory.hp
old/cplusplus/source/novemberizing/descriptor/: integer.cc  integer.hp
old/cplusplus/source/novemberizing/event/: engine.hp  executor.hp
old/cplusplus/source/novemberizing/integer/: add.hp  is.hp  to.hp
old/cplusplus/source/novemberizing/internet/: address.cc  address.hh  address.hp
old/cplusplus/source/novemberizing/internet/address/: to.hp
old/cplusplus/source/novemberizing/iterator/: accessor.hp
old/cplusplus/source/novemberizing/linked/: list.cc  list.hh  list.hp
old/cplusplus/source/novemberizing/linked/list/: node.hp
old/cplusplus/source/novemberizing/message/digest/: v5.cc  v5.hh  v5.hp
old/cplusplus/source/novemberizing/red/black/: tree.cc  tree.hh  tree.hp
old/cplusplus/source/novemberizing/red/black/tree/: fix.hp  node.hp  rotate.hp
old/cplusplus/source/novemberizing/secure/hash/algorithm/: v1.cc  v1.hh  v1.hp  v2.cc  v2.hh  v2.hp
old/cplusplus/source/novemberizing/string/: format.cc
old/cplusplus/source/novemberizing/tuple/: pair.cc  pair.hh  pair.hp  single.cc  single.hh  single.hp  triple.cc  triple.hh  triple.hp
old/cplusplus/source/novemberizing/uuid/: is.cc  is.hp  to.cc  to.hp
old/cpp/: CMakeLists.txt
old/cpp/document/novemberizing/: list.md  random.md
old/cpp/sample/: CMakeLists.txt  novemberizing.cc
old/cpp/sample/novemberizing/: bytes.cc  exception.cc  memory.cc  random.cc  string.cc
old/cpp/sample/novemberizing/event/: engine.cc
old/cpp/sample/novemberizing/linked/: list.cc
old/cpp/source/: novemberizing.hh
old/cpp/source/novemberizing/: bytes.hh  callback.hh  collection.hh  container.hh  event.hh  exception.hh  function.hh  list.hh  memory.hh  move.hh  random.hh  runnable.hh  string.cc  string.hh  sync.hh
old/cpp/source/novemberizing/event/: engine.cc
old/cpp/source/novemberizing/linked/: list.hh
old/data.structure/: README.md
old/disassemble/: README.md  ls.md
old/dom/: build.gradle  settings.gradle
old/euler/: .gitignore  CMakeLists.txt  README.md  main.cpp
old/euler/problem/: 20180813.cc  20180813.hh  20180813.md  20180814.cc  20180814.hh  20180814.md  20180815.cc  20180815.hh  20180815.md  20180816.cc  20180816.hh  20180816.md  20180817.cc  20180817.hh  20180817.md  20180818.cc  20180818.hh  20180818.md  20180820.cc  20180820.hh
old/git2/: .gitignore  README.md  TODO.md  index.js  novemberizing.git.uml  package-lock.json  package.json
old/java/: README.md  build.gradle
old/java-common/: build.gradle
old/java-html/: .gitignore  build.gradle  settings.gradle
old/java-html2/: build.gradle
old/java2/: build.gradle
old/javascript/: README.md  novemberizing.data.structure.visualization.md  novemberizing.html
old/suho108/: CMakeLists.txt  main.cpp
opengl/: README.md  hexagon.cpp  linegraph.cpp
primitive/: CMakeLists.txt
primitive/sample/: CMakeLists.txt  primitive.c
primitive/src/: discomplexity.c  discomplexity.h
primitive/src/discomplexity/: primitive.c  primitive.h
primitive/src/discomplexity/primitive/: string.c
tesseract/: basic.cpp
(+487 files in other folders)
